Added argumentcount to all blackcards

--- a/categories/basic.tex
+++ b/categories/basic.tex
@@ -327,7 +327,7 @@
 %
 
 \blackcard{1}{Basis}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}
-\blackcard{1}{Basis}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}
+\blackcard{2}{Basis}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}
 \blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}
 \blackcard{1}{Basis}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}
 \blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}
@@ -335,7 +335,7 @@
 \blackcard{1}{Basis}{Bald zu sehen: \underl, das Musical.}
 \blackcard{1}{Basis}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}
 \blackcard{1}{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}
-\blackcard{1}{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}
+\blackcard{2}{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}
 \blackcard{1}{Basis}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}
 \blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}
 \blackcard{1}{Basis}{Ein Essen im Kerzenschein wäre nix ohne \underl.}
@@ -343,28 +343,27 @@
 \blackcard{1}{Basis}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}
 \blackcard{1}{Basis}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}
 \blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}
-\blackcard{1}{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}
+\blackcard{2}{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}
 \blackcard{1}{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}
 \blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}
 \blackcard{1}{Basis}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}
-\blackcard{1}{Basis}{In einer Welt verwüstet von \underl, ist dein einziger Trost \underl.}
+\blackcard{2}{Basis}{In einer Welt verwüstet von \underl, ist dein einziger Trost \underl.}
 \blackcard{1}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}
-\blackcard{1}{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}
-\blackcard{1}{Basis}{Man sagt, man könne im Knast \underl für 200 Zigaretten bekommen.}
+\blackcard{2}{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}
+\blackcard{1}{Basis}{Man sagt, im Knast könne man für 200 Zigaretten \underl bekommen.}
 \blackcard{1}{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}
 \blackcard{1}{Basis}{Papa, warum weint Mama?}
 \blackcard{1}{Basis}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}
-\blackcard{1}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}
-\blackcard{1}{Basis}{Statt Kohle bring der Weihnachtsmann unartigen Kindern jetzt \underl.}
-\blackcard{1}{Basis}{...Und der Preis für \underl geht an \underl.}
+\blackcard{3}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}
+\blackcard{1}{Basis}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}
+\blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}
 \blackcard{1}{Basis}{\underl. High Five, bro.}
-\blackcard{1}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}
+\blackcard{2}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}
 \blackcard{1}{Basis}{\underl:\newline Gut bis zum letzten Tropfen.}
 \blackcard{1}{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}
 \blackcard{1}{Basis}{\underl. So will ich sterben!}
-\blackcard{1}{Basis}{\underl + \underl\newline = \underl.}
+\blackcard{3}{Basis}{\underl + \underl\newline = \underl.}
 \blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}
-\blackcard{1}{Basis}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die Mexikanische Regierung die Erforschung von \underl.}
 \blackcard{1}{Basis}{Warum bin ich so klebrig?}
 \blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}
 \blackcard{1}{Basis}{Warum tut mir alles weh?}
@@ -376,8 +375,8 @@
 \blackcard{1}{Basis}{Was hat Vin Diesel zum Mittag gegessen?}
 \blackcard{1}{Basis}{Was hilft Angela Merkel zum Entspannen?}
 \blackcard{1}{Basis}{Was ist Batmans geheime Vorliebe?}
-\blackcard{1}{Basis}{Was ist das für ein geräusch?}
-\blackcard{1}{Basis}{Was ist das für ein Geruch?}
+\blackcard{1}{Basis}{Was ist denn das für ein Geräusch?}
+\blackcard{1}{Basis}{Was ist denn das für ein Geruch?}
 \blackcard{1}{Basis}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}
 \blackcard{1}{Basis}{Was ist der beste Freund eines Mädchens?}
 \blackcard{1}{Basis}{Was ist die neue Modediät?}
@@ -389,7 +388,7 @@
 \blackcard{1}{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden?}
 \blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu gedenken würde ich eine Statue bauen?}
 \blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}
-\blackcard{1}{Basis}{Wie pflege ich meinen Beziehungsstatus?\newline Mit \underl.}
-\blackcard{1}{Basis}{Wir stellen Xtreme Fußball vor! Es ist wie normales Fußball, nur mit \underl.}
-\blackcard{1}{Basis}{Womit werden wir in 1000 Jahren bezahlen? Mit \underl.}
+\blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}
+\blackcard{1}{Basis}{Wir stellen vor: Xtreme Fußball! Es ist wie normales Fußball, nur mit \underl.}
+\blackcard{1}{Basis}{Womit werden wir in 1000 Jahren bezahlen?}
 \blackcard{1}{Basis}{Womit wirst du immer einen Partner beeindrucken können?}
