--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -41,7 +41,7 @@
 %
 
 \blackcard{1}{FSK16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}
-\blackcard{1}{FSK16}{Ich denke wärend des Sex gerne über \underl nach.}
-\blackcard{1}{FSK16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}
+\blackcard{1}{FSK16}{Ich denke während des Sex gerne über \underl nach.}
+\blackcard{2}{FSK16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}
 \blackcard{1}{FSK16}{Was lässt mich unkontrolliert furzen?}
 \blackcard{1}{FSK16}{Wie verlor ich meine Jungfräulichkeit?}
