--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -12,11 +12,17 @@
 \include{commands}
 
 \include{categories/basic}
+\newpage
 \include{categories/boese}
+\newpage
 \include{categories/drogen}
+\newpage
 \include{categories/eklig}
+\newpage
 \include{categories/fsk16}
+\newpage
 \include{categories/fsk18}
+\newpage
 \include{categories/politics}
 
 \end{document}
