--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -2,14 +2,15 @@
 % Whitecards
 %
 
-\whitecard{Drogen}{Mal so richtig\newline high werden.}
-\whitecard{Drogen}{8kg Heroin.}
-\whitecard{Drogen}{Amphetamin.}
-\whitecard{Drogen}{Kleber schnüffeln.}
+\whitecard{Drogen}{Mal so richtig\newline high werden.}%
+\whitecard{Drogen}{8kg Heroin.}%
+\whitecard{Drogen}{Amphetamin.}%
+
+\whitecard{Drogen}{Kleber schnüffeln.}%
 
 %
 % Blackcards
 %
 
-\blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}
-\blackcard{2}{Drogen}{Als einen Acid-Trip hatte, wurde \underl zu \underl.}
+\blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
+\blackcard{2}{Drogen}{Als einen Acid-Trip hatte, wurde \underl zu \underl.}%
