--- a/categories/fsk18.tex
+++ b/categories/fsk18.tex
@@ -2,31 +2,38 @@
 % Whitecards
 %
 
-\whitecard{FSK18}{Ein schlechter Handjob.}
-\whitecard{FSK18}{Anal-Sex.}
-\whitecard{FSK18}{Analkette.}
-\whitecard{FSK18}{Deutsche \newline Sado-Maso-\newline Pornos.}
-\whitecard{FSK18}{Ein Gewehr\newline in die Luft\newline abfeuern mit\newline den Eiern tief in einer\newline quiekenden Sau.}
-\whitecard{FSK18}{Fingern.}
-\whitecard{FSK18}{Gloryholes.}
-\whitecard{FSK18}{Ihr den Arsch abwischen.}
-\whitecard{FSK18}{In einen Pool\newline voller\newline Kindertränen\newline wichsen.}
-\whitecard{FSK18}{Inzest.}
-\whitecard{FSK18}{Natursekt.}
-\whitecard{FSK18}{Oralsex nicht\newline erwiedern.}
-\whitecard{FSK18}{Panda Sex.}
-\whitecard{FSK18}{Sex mit Patrick Steward.}
-\whitecard{FSK18}{Sich ein Einweckglas in den Anus einführen.}
-\whitecard{FSK18}{Zensierte Bukkakke-Pornos.}
-\whitecard{FSK18}{Drei Schwänze auf einmal.}
-\whitecard{FSK18}{Eine\newline Schildkröte, die einem in den\newline Penis beißt.}
-\whitecard{FSK18}{Ein Fleshlight.}
-\whitecard{FSK18}{Kein Sperma\newline mehr übrig\newline haben.}
-\whitecard{FSK18}{Meine\newline Sammlung an\newline High-Tech-Sex-newline Spielzeugen.}
-\whitecard{FSK18}{Tentakel Pornos.}
+\whitecard{FSK18}{Ein schlechter Handjob.}%
+\whitecard{FSK18}{Anal-Sex.}%
+\whitecard{FSK18}{Analkette.}%
+
+\whitecard{FSK18}{Deutsche \newline Sado-Maso-\newline Pornos.}%
+\whitecard{FSK18}{Ein Gewehr\newline in die Luft\newline abfeuern mit\newline den Eiern tief in einer\newline quiekenden Sau.}%
+\whitecard{FSK18}{Fingern.}%
+
+\whitecard{FSK18}{Gloryholes.}%
+\whitecard{FSK18}{Ihr den Arsch abwischen.}%
+\whitecard{FSK18}{In einen Pool\newline voller\newline Kindertränen\newline wichsen.}%
+
+\whitecard{FSK18}{Inzest.}%
+\whitecard{FSK18}{Natursekt.}%
+\whitecard{FSK18}{Oralsex nicht\newline erwiedern.}%
+
+\whitecard{FSK18}{Panda Sex.}%
+\whitecard{FSK18}{Sex mit Patrick Steward.}%
+\whitecard{FSK18}{Sich ein Einweckglas in den Anus einführen.}%
+
+\whitecard{FSK18}{Zensierte Bukkakke-Pornos.}%
+\whitecard{FSK18}{Drei Schwänze auf einmal.}%
+\whitecard{FSK18}{Eine\newline Schildkröte, die einem in den\newline Penis beißt.}%
+
+\whitecard{FSK18}{Ein Fleshlight.}%
+\whitecard{FSK18}{Kein Sperma\newline mehr übrig\newline haben.}%
+\whitecard{FSK18}{Meine\newline Sammlung an\newline High-Tech-Sex-newline Spielzeugen.}%
+
+\whitecard{FSK18}{Tentakel Pornos.}%
 
 %
 % Blackcards
 %
 
-\blackcard{1}{FSK18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}
+\blackcard{1}{FSK18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
