--- a/commands.tex
+++ b/commands.tex
@@ -34,8 +34,8 @@
 		\fi};
 		% Category
 		\node[anchor=south east] at (\cardwidth, 0) {\scriptsize #2};
-	\end{tikzpicture}
-}
+	\end{tikzpicture}%
+}%
 
 \newcommand{\whitecard}[2] {%
 	\begin{tikzpicture}%
@@ -51,5 +51,5 @@
 		{{\LARGE #2\par}};
 		% Category
 		\node[anchor=south east] at (\cardwidth, 0) {#1};
-	\end{tikzpicture}
-}
+	\end{tikzpicture}%
+}%
