Added license headers, further fixes to sapcing, added title-cards

--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -1,8 +1,25 @@
 %
-% Whitecards
+% This file is part of Cards Against Humanity Fullformat German.
 %
-
-\whitecard{Böse}{Lepra.}%
+% Cards Against Humanity Fullformat German is free software:
+% you can redistribute it and/or modify it under the terms of the
+% GNU General Public License as published by the Free Software Foundation,
+% either version 3 of the License, or (at your option) any later version.
+%
+% Cards Against Humanity Fullformat German is distributed in the hope that it
+% will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with Cards Against Humanity Fullformat German.
+% If not, see <http://www.gnu.org/licenses/>.
+%
+%
+% Please note: All whitespace characters might break this document. Please
+% avoid placing whitespace character that are not intended inside these files.
+%
+\titlecard{Böse}%
 \whitecard{Böse}{In Polen einmarschieren.}%
 \whitecard{Böse}{Abtreibungen\newline mit\newline Kleiderbügeln.}%
 
@@ -43,13 +60,9 @@
 \whitecard{Böse}{Skalps von\newline weißen\newline Männern.}%
 
 \whitecard{Böse}{Verlust von Zivilisten.}%
-
-%
-% Blackcards
-%
-
+\whitecard{Böse}{Lepra.}%
 \blackcard{1}{Böse}{Wofür ist Krieg gut?}%
+
 \blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
 \blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
-
 \blackcard{1}{Böse}{Weiße Menschen wie \underl.}%
