--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -1,16 +1,30 @@
 %
-% Whitecards
+% This file is part of Cards Against Humanity Fullformat German.
 %
-
-\whitecard{Drogen}{Mal so richtig\newline high werden.}%
+% Cards Against Humanity Fullformat German is free software:
+% you can redistribute it and/or modify it under the terms of the
+% GNU General Public License as published by the Free Software Foundation,
+% either version 3 of the License, or (at your option) any later version.
+%
+% Cards Against Humanity Fullformat German is distributed in the hope that it
+% will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with Cards Against Humanity Fullformat German.
+% If not, see <http://www.gnu.org/licenses/>.
+%
+%
+% Please note: All whitespace characters might break this document. Please
+% avoid placing whitespace character that are not intended inside these files.
+%
+\titlecard{Drogen}%
 \whitecard{Drogen}{8kg Heroin.}%
 \whitecard{Drogen}{Amphetamin.}%
 
 \whitecard{Drogen}{Kleber schnüffeln.}%
-
-%
-% Blackcards
-%
-
+\whitecard{Drogen}{Mal so richtig\newline high werden.}%
 \blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
+
 \blackcard{2}{Drogen}{Als einen Acid-Trip hatte, wurde \underl zu \underl.}%
