--- a/categories/eklig.tex
+++ b/categories/eklig.tex
@@ -1,8 +1,25 @@
 %
-% Whitecards
+% This file is part of Cards Against Humanity Fullformat German.
 %
-
-\whitecard{Eklig}{Ein Schwamm\newline voller\newline Katzenpisse.}%
+% Cards Against Humanity Fullformat German is free software:
+% you can redistribute it and/or modify it under the terms of the
+% GNU General Public License as published by the Free Software Foundation,
+% either version 3 of the License, or (at your option) any later version.
+%
+% Cards Against Humanity Fullformat German is distributed in the hope that it
+% will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with Cards Against Humanity Fullformat German.
+% If not, see <http://www.gnu.org/licenses/>.
+%
+%
+% Please note: All whitespace characters might break this document. Please
+% avoid placing whitespace character that are not intended inside these files.
+%
+\titlecard{Eklig}%
 \whitecard{Eklig}{Brennende Schisse.}%
 \whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Samen und Fussnägeln.}%
 
@@ -24,9 +41,6 @@
 
 \whitecard{Eklig}{Einen Rülpser\newline erwarten und\newline stattdessen auf\newline den Boden\newline kotzen.}%
 \whitecard{Eklig}{Ein Fotzenfurz.}%
-
-%
-% Blackcards
-%
+\whitecard{Eklig}{Ein Schwamm\newline voller\newline Katzenpisse.}
 
 \blackcard{2}{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
