--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -1,59 +1,72 @@
 %
-% Whitecards
+% This file is part of Cards Against Humanity Fullformat German.
 %
-
-\whitecard{FSK16}{Ein-\newline vernehmlicher Sex.}%
-\whitecard{FSK16}{50,000 Volt\newline genau in die\newline Nippel.}%
-\whitecard{FSK16}{Daniel\newline Radcliffes\newline appetitliches Arschloch.}%
-
-\whitecard{FSK16}{Der weibliche Orgasmus.}%
-\whitecard{FSK16}{Eine erotische schwarze Frau.}%
-\whitecard{FSK16}{Ein gebleichtes Arschloch.}%
-
-\whitecard{FSK16}{Ein kaputtes Kondom.}%
-\whitecard{FSK16}{Ein Mikropenis.}%
-\whitecard{FSK16}{Erektile\newline Dysfunktion.}%
-
-\whitecard{FSK16}{Feuchte Träume.}%
-\whitecard{FSK16}{Fliegende Sex-Schlangen.}%
-\whitecard{FSK16}{Erotische Kissen-\newline schlachten.}%
-
-\whitecard{FSK16}{"Ihn" rausholen.}%
-\whitecard{FSK16}{Klitoris.}%
-\whitecard{FSK16}{Lance\newline Armstrongs\newline fehlender\newline Hoden.}%
-
-\whitecard{FSK16}{Masturbation.}%
-\whitecard{FSK16}{Meine Vagina.}%
-\whitecard{FSK16}{Oma nackt\newline sehen.}%
-
-\whitecard{FSK16}{Penis-Atem.}%
-\whitecard{FSK16}{Penis-Finger.}%
-\whitecard{FSK16}{Sanftes Liebkosen der Oberschenkel.}%
-
-\whitecard{FSK16}{Schlechtes\newline Vorspiel.}%
-\whitecard{FSK16}{So wütend werden, dass man\newline eine Erektion\newline bekommt.}%
-\whitecard{FSK16}{Stephen Hawkings\newline Sexgespräche.}%
-
-\whitecard{FSK16}{Ein Mann am Rande des\newline Orgasmus.}%
-\whitecard{FSK16}{Testikuläre\newline Verdrehung.}%
-\whitecard{FSK16}{Überraschungs Sex!}%
-
-\whitecard{FSK16}{Vollständige Nacktheit.}%
-\whitecard{FSK16}{Vorhäute.}%
-\whitecard{FSK16}{Erotische\newline Harry-Potter\newline Literatur.}%
-
-\whitecard{FSK16}{Laktation.}%
-\whitecard{FSK16}{Sexuelle\newline Spannungen.}%
-\whitecard{FSK16}{Sich nackt\newline ausziehen und\newline Kika gucken.}%
-
-
+% Cards Against Humanity Fullformat German is free software:
+% you can redistribute it and/or modify it under the terms of the
+% GNU General Public License as published by the Free Software Foundation,
+% either version 3 of the License, or (at your option) any later version.
 %
-% Blackcards
+% Cards Against Humanity Fullformat German is distributed in the hope that it
+% will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
 %
+% You should have received a copy of the GNU General Public License
+% along with Cards Against Humanity Fullformat German.
+% If not, see <http://www.gnu.org/licenses/>.
+%
+%
+% Please note: All whitespace characters might break this document. Please
+% avoid placing whitespace character that are not intended inside these files.
+%
+\titlecard{FSK 16}%
+\whitecard{FSK 16}{50,000 Volt\newline genau in die\newline Nippel.}%
+\whitecard{FSK 16}{Daniel\newline Radcliffes\newline appetitliches Arschloch.}%
 
-\blackcard{1}{FSK16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}%
-\blackcard{1}{FSK16}{Ich denke während des Sex gerne über \underl nach.}%
-\blackcard{2}{FSK16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
+\whitecard{FSK 16}{Der weibliche Orgasmus.}%
+\whitecard{FSK 16}{Eine erotische schwarze Frau.}%
+\whitecard{FSK 16}{Ein gebleichtes Arschloch.}%
 
-\blackcard{1}{FSK16}{Was lässt mich unkontrolliert furzen?}%
-\blackcard{1}{FSK16}{Wie verlor ich meine Jungfräulichkeit?}%
+\whitecard{FSK 16}{Ein kaputtes Kondom.}%
+\whitecard{FSK 16}{Ein Mikropenis.}%
+\whitecard{FSK 16}{Erektile\newline Dysfunktion.}%
+
+\whitecard{FSK 16}{Feuchte Träume.}%
+\whitecard{FSK 16}{Fliegende Sex-Schlangen.}%
+\whitecard{FSK 16}{Erotische Kissen-\newline schlachten.}%
+
+\whitecard{FSK 16}{"Ihn" rausholen.}%
+\whitecard{FSK 16}{Klitoris.}%
+\whitecard{FSK 16}{Lance\newline Armstrongs\newline fehlender\newline Hoden.}%
+
+\whitecard{FSK 16}{Masturbation.}%
+\whitecard{FSK 16}{Meine Vagina.}%
+\whitecard{FSK 16}{Oma nackt\newline sehen.}%
+
+\whitecard{FSK 16}{Penis-Atem.}%
+\whitecard{FSK 16}{Penis-Finger.}%
+\whitecard{FSK 16}{Sanftes Liebkosen der Oberschenkel.}%
+
+\whitecard{FSK 16}{Schlechtes\newline Vorspiel.}%
+\whitecard{FSK 16}{So wütend werden, dass man\newline eine Erektion\newline bekommt.}%
+\whitecard{FSK 16}{Stephen Hawkings\newline Sexgespräche.}%
+
+\whitecard{FSK 16}{Ein Mann am Rande des\newline Orgasmus.}%
+\whitecard{FSK 16}{Testikuläre\newline Verdrehung.}%
+\whitecard{FSK 16}{Überraschungs Sex!}%
+
+\whitecard{FSK 16}{Vollständige Nacktheit.}%
+\whitecard{FSK 16}{Vorhäute.}%
+\whitecard{FSK 16}{Erotische\newline Harry-Potter\newline Literatur.}%
+
+\whitecard{FSK 16}{Laktation.}%
+\whitecard{FSK 16}{Sexuelle\newline Spannungen.}%
+\whitecard{FSK 16}{Sich nackt\newline ausziehen und\newline Kika gucken.}%
+
+\whitecard{FSK 16}{Ein-\newline vernehmlicher Sex.}%
+\blackcard{1}{FSK 16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}%
+\blackcard{1}{FSK 16}{Ich denke während des Sex gerne über \underl nach.}%
+
+\blackcard{2}{FSK 16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
+\blackcard{1}{FSK 16}{Was lässt mich unkontrolliert furzen?}%
+\blackcard{1}{FSK 16}{Wie verlor ich meine Jungfräulichkeit?}%
