--- a/categories/politics.tex
+++ b/categories/politics.tex
@@ -1,9 +1,27 @@
 %
-% Whitecards
+% This file is part of Cards Against Humanity Fullformat German.
 %
+% Cards Against Humanity Fullformat German is free software:
+% you can redistribute it and/or modify it under the terms of the
+% GNU General Public License as published by the Free Software Foundation,
+% either version 3 of the License, or (at your option) any later version.
+%
+% Cards Against Humanity Fullformat German is distributed in the hope that it
+% will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with Cards Against Humanity Fullformat German.
+% If not, see <http://www.gnu.org/licenses/>.
+%
+%
+% Please note: All whitespace characters might break this document. Please
+% avoid placing whitespace character that are not intended inside these files.
+%
+\titlecard{Politik}%
 \whitecard{Politik}{Ihre Majestät,\newline Königin\newline Elizabeth II.}%
 \whitecard{Politik}{Angela Merkel.}%
-\whitecard{Politik}{Arbeitsplätze.}%
 
 \whitecard{Politik}{Barack Obama.}%
 \whitecard{Politik}{CDU-Wähler.}%
@@ -19,11 +37,7 @@
 
 \whitecard{Politik}{Stalin.}%
 \whitecard{Politik}{Weltfrieden.}%
-
-
-%
-% Blackcards
-%
+\whitecard{Politik}{Arbeitsplätze.}%
 
 \blackcard{1}{Politik}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
 \blackcard{1}{Politik}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
