--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -1,3 +1,24 @@
+%
+% This file is part of Cards Against Humanity Fullformat German.
+%
+% Cards Against Humanity Fullformat German is free software:
+% you can redistribute it and/or modify it under the terms of the
+% GNU General Public License as published by the Free Software Foundation,
+% either version 3 of the License, or (at your option) any later version.
+%
+% Cards Against Humanity Fullformat German is distributed in the hope that it
+% will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with Cards Against Humanity Fullformat German.
+% If not, see <http://www.gnu.org/licenses/>.
+%
+%
+% Please note: All whitespace characters might break this document. Please
+% avoid placing whitespace character that are not intended inside these files.
+%
 \documentclass[a4paper,parskip]{scrartcl}
 \usepackage[top=10mm,bottom=10mm,left=15mm,right=15mm]{geometry}
 \usepackage{tikz}
@@ -5,9 +26,8 @@
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
 \begin{document}
-\setlength{\baselineskip}{16pt}
 \def\SymbReg{\textsuperscript{\textregistered}}
-\setlength{\parskip}{0pt}
+\setlength{\parskip}{-1pt}
 
 \include{commands}
 
