--- a/categories/basic.tex
+++ b/categories/basic.tex
@@ -1,8 +1,25 @@
 %
-% Whitecards
+% This file is part of Cards Against Humanity Fullformat German.
 %
-
-\whitecard{Basis}{110\% geben}%
+% Cards Against Humanity Fullformat German is free software:
+% you can redistribute it and/or modify it under the terms of the
+% GNU General Public License as published by the Free Software Foundation,
+% either version 3 of the License, or (at your option) any later version.
+%
+% Cards Against Humanity Fullformat German is distributed in the hope that it
+% will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with Cards Against Humanity Fullformat German.
+% If not, see <http://www.gnu.org/licenses/>.
+%
+%
+% Please note: All whitespace characters might break this document. Please
+% avoid placing whitespace character that are not intended inside these files.
+%
+\titlecard{Basis}%
 \whitecard{Basis}{5 Euro Subway Footlongs.}%
 \whitecard{Basis}{72 Jungfrauen.}%
 
@@ -427,14 +444,8 @@
 \whitecard{Basis}{Zentauren.}%
 
 \whitecard{Basis}{Zuhälter.}%
-
-%
-% Blackcards
-%
-
+\whitecard{Basis}{110\% geben}%
 \blackcard{1}{Basis}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
-\blackcard{2}{Basis}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
-\blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
 
 \blackcard{1}{Basis}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
 \blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
@@ -519,3 +530,6 @@
 \blackcard{1}{Basis}{Wir stellen vor: Xtreme Fußball! Es ist wie normales Fußball, nur mit \underl.}%
 \blackcard{1}{Basis}{Womit werden wir in 1000 Jahren bezahlen?}%
 \blackcard{1}{Basis}{Womit wirst du immer einen Partner beeindrucken können?}%
+
+\blackcard{2}{Basis}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
+\blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
