--- a/categories/fsk18.tex
+++ b/categories/fsk18.tex
@@ -1,39 +1,55 @@
 %
-% Whitecards
+% This file is part of Cards Against Humanity Fullformat German.
 %
+% Cards Against Humanity Fullformat German is free software:
+% you can redistribute it and/or modify it under the terms of the
+% GNU General Public License as published by the Free Software Foundation,
+% either version 3 of the License, or (at your option) any later version.
+%
+% Cards Against Humanity Fullformat German is distributed in the hope that it
+% will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with Cards Against Humanity Fullformat German.
+% If not, see <http://www.gnu.org/licenses/>.
+%
+%
+% Please note: All whitespace characters might break this document. Please
+% avoid placing whitespace character that are not intended inside these files.
+%
+\titlecard{FSK 18}%
+\whitecard{FSK 18}{Anal-Sex.}%
+\whitecard{FSK 18}{Analkette.}%
 
-\whitecard{FSK18}{Ein schlechter Handjob.}%
-\whitecard{FSK18}{Anal-Sex.}%
-\whitecard{FSK18}{Analkette.}%
+\whitecard{FSK 18}{Deutsche \newline Sado-Maso-\newline Pornos.}%
+\whitecard{FSK 18}{Ein Gewehr\newline in die Luft\newline abfeuern mit\newline den Eiern tief in einer\newline quiekenden Sau.}%
+\whitecard{FSK 18}{Fingern.}%
 
-\whitecard{FSK18}{Deutsche \newline Sado-Maso-\newline Pornos.}%
-\whitecard{FSK18}{Ein Gewehr\newline in die Luft\newline abfeuern mit\newline den Eiern tief in einer\newline quiekenden Sau.}%
-\whitecard{FSK18}{Fingern.}%
+\whitecard{FSK 18}{Gloryholes.}%
+\whitecard{FSK 18}{Ihr den Arsch abwischen.}%
+\whitecard{FSK 18}{In einen Pool\newline voller\newline Kindertränen\newline wichsen.}%
 
-\whitecard{FSK18}{Gloryholes.}%
-\whitecard{FSK18}{Ihr den Arsch abwischen.}%
-\whitecard{FSK18}{In einen Pool\newline voller\newline Kindertränen\newline wichsen.}%
+\whitecard{FSK 18}{Inzest.}%
+\whitecard{FSK 18}{Natursekt.}%
+\whitecard{FSK 18}{Oralsex nicht\newline erwiedern.}%
 
-\whitecard{FSK18}{Inzest.}%
-\whitecard{FSK18}{Natursekt.}%
-\whitecard{FSK18}{Oralsex nicht\newline erwiedern.}%
+\whitecard{FSK 18}{Panda Sex.}%
+\whitecard{FSK 18}{Sex mit Patrick Steward.}%
+\whitecard{FSK 18}{Sich ein Einweckglas in den Anus einführen.}%
 
-\whitecard{FSK18}{Panda Sex.}%
-\whitecard{FSK18}{Sex mit Patrick Steward.}%
-\whitecard{FSK18}{Sich ein Einweckglas in den Anus einführen.}%
+\whitecard{FSK 18}{Zensierte Bukkakke-Pornos.}%
+\whitecard{FSK 18}{Drei Schwänze auf einmal.}%
+\whitecard{FSK 18}{Eine\newline Schildkröte, die einem in den\newline Penis beißt.}%
 
-\whitecard{FSK18}{Zensierte Bukkakke-Pornos.}%
-\whitecard{FSK18}{Drei Schwänze auf einmal.}%
-\whitecard{FSK18}{Eine\newline Schildkröte, die einem in den\newline Penis beißt.}%
+\whitecard{FSK 18}{Ein Fleshlight.}%
+\whitecard{FSK 18}{Kein Sperma\newline mehr übrig\newline haben.}%
+\whitecard{FSK 18}{Meine\newline Sammlung an\newline High-Tech-Sex-newline Spielzeugen.}%
 
-\whitecard{FSK18}{Ein Fleshlight.}%
-\whitecard{FSK18}{Kein Sperma\newline mehr übrig\newline haben.}%
-\whitecard{FSK18}{Meine\newline Sammlung an\newline High-Tech-Sex-newline Spielzeugen.}%
-
-\whitecard{FSK18}{Tentakel Pornos.}%
-
+\whitecard{FSK 18}{Tentakel Pornos.}%
+\whitecard{FSK 18}{Ein schlechter Handjob.}%
 %
 % Blackcards
 %
-
-\blackcard{1}{FSK18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
+\blackcard{1}{FSK 18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
