Added missing cards. Now all cards from the original game are included.

--- a/categories/basic.tex
+++ b/categories/basic.tex
@@ -445,91 +445,111 @@
 
 \whitecard{Basis}{Zuhälter.}%
 \whitecard{Basis}{110\% geben}%
-\blackcard{1}{Basis}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
+\whitecard{Basis}{Helmut Kohl.}%
 
+\whitecard{Basis}{Rassisitisch voreingenommene Einstellungstests.}%
+\whitecard{Basis}{Bastian\newline Pastevkas\newline Schauspielkarriere.}%
+\whitecard{Basis}{Ein Bop it!}%
+
+\whitecard{Basis}{Die Make-A-Wish Stiftung.}%
+\whitecard{Basis}{Whiskas.}%
+\whitecard{Basis}{Til Schweiger.}%
+
+\blackcard{1}{Basis}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
 \blackcard{1}{Basis}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
 \blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
-\blackcard{1}{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}%
 
+\blackcard{1}{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}%
 \blackcard{1}{Basis}{Bald zu sehen: \underl, das Musical.}%
 \blackcard{1}{Basis}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
-\blackcard{1}{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}%
 
+\blackcard{1}{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}%
 \blackcard{2}{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
 \blackcard{1}{Basis}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
-\blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
 
+\blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
 \blackcard{1}{Basis}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
 \blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben nicht machen, weil \underl.}%
-\blackcard{1}{Basis}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
 
+\blackcard{1}{Basis}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
 \blackcard{1}{Basis}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
 \blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
-\blackcard{2}{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 
+\blackcard{2}{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 \blackcard{1}{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
 \blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}%
-\blackcard{1}{Basis}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}%
 
+\blackcard{1}{Basis}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}%
 \blackcard{2}{Basis}{In einer Welt verwüstet von \underl, ist dein einziger Trost \underl.}%
 \blackcard{1}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}%
-\blackcard{2}{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}%
 
+\blackcard{2}{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}%
 \blackcard{1}{Basis}{Man sagt, im Knast könne man für 200 Zigaretten \underl bekommen.}%
 \blackcard{1}{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}%
-\blackcard{1}{Basis}{Papa, warum weint Mama?}%
 
+\blackcard{1}{Basis}{Papa, warum weint Mama?}%
 \blackcard{1}{Basis}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}%
 \blackcard{3}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}%
-\blackcard{1}{Basis}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}%
 
+\blackcard{1}{Basis}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}%
 \blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}%
 \blackcard{1}{Basis}{\underl. High Five, bro.}%
-\blackcard{2}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}%
 
+\blackcard{2}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}%
 \blackcard{1}{Basis}{\underl:\newline Gut bis zum letzten Tropfen.}%
 \blackcard{1}{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
-\blackcard{1}{Basis}{\underl. So will ich sterben!}%
 
+\blackcard{1}{Basis}{\underl. So will ich sterben!}%
 \blackcard{3}{Basis}{\underl + \underl\newline = \underl.}%
 \blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}%
-\blackcard{1}{Basis}{Warum bin ich so klebrig?}%
 
+\blackcard{1}{Basis}{Warum bin ich so klebrig?}%
 \blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}%
 \blackcard{1}{Basis}{Warum tut mir alles weh?}%
-\blackcard{1}{Basis}{Was bringe ich aus der Türkei mit?}%
 
+\blackcard{1}{Basis}{Was bringe ich aus der Türkei mit?}%
 \blackcard{1}{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
 \blackcard{1}{Basis}{Was gibt es tonnenweise im Himmel?}%
-\blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
 
+\blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
 \blackcard{1}{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben?}%
 \blackcard{1}{Basis}{Was hat Vin Diesel zum Mittag gegessen?}%
-\blackcard{1}{Basis}{Was hilft Angela Merkel zum Entspannen?}%
 
+\blackcard{1}{Basis}{Was hilft Angela Merkel zum Entspannen?}%
 \blackcard{1}{Basis}{Was ist Batmans geheime Vorliebe?}%
 \blackcard{1}{Basis}{Was ist denn das für ein Geräusch?}%
-\blackcard{1}{Basis}{Was ist denn das für ein Geruch?}%
 
+\blackcard{1}{Basis}{Was ist denn das für ein Geruch?}%
 \blackcard{1}{Basis}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}%
 \blackcard{1}{Basis}{Was ist der beste Freund eines Mädchens?}%
-\blackcard{1}{Basis}{Was ist die neue Modediät?}%
 
+\blackcard{1}{Basis}{Was ist die neue Modediät?}%
 \blackcard{1}{Basis}{Was ist meine geheime Kraft?}%
 \blackcard{1}{Basis}{Was verstecken meine Eltern vor mir?}%
-\blackcard{1}{Basis}{Was werde ich aus der Zukunft mitbringen, um alle davon zu überzeugen, dass ich ein großartiger Magier bin?}%
 
+\blackcard{1}{Basis}{Was werde ich aus der Zukunft mitbringen, um alle davon zu überzeugen, dass ich ein großartiger Magier bin?}%
 \blackcard{1}{Basis}{Was willst du nicht in deinem asiatischen Essen finden?}%
 \blackcard{1}{Basis}{Was wird mit dem Alter besser?}%
-\blackcard{1}{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden?}%
 
+\blackcard{1}{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden?}%
 \blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu gedenken würde ich eine Statue bauen?}%
 \blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}%
-\blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}%
 
+\blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}%
 \blackcard{1}{Basis}{Wir stellen vor: Xtreme Fußball! Es ist wie normales Fußball, nur mit \underl.}%
 \blackcard{1}{Basis}{Womit werden wir in 1000 Jahren bezahlen?}%
-\blackcard{1}{Basis}{Womit wirst du immer einen Partner beeindrucken können?}%
 
+\blackcard{1}{Basis}{Womit wirst du immer einen Partner beeindrucken können?}%
 \blackcard{2}{Basis}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
 \blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
+
+\blackcard{3}{Basis}{Schreibe einen Haiku:\newline \underl \newline \underl \newline \underl}%
+\blackcard{1}{Basis}{Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen?}%
+\blackcard{1}{Basis}{\underl macht Kinder froh und Erwachsene ebenso.}%
+
+\blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
+\blackcard{1}{Basis}{\underl, davon kann man nicht nur einen haben!}%
+\blackcard{1}{Basis}{In M. Night Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
+
+\blackcard{1}{Basis}{Was ist am meisten emo?}%
+\blackcard{1}{Basis}{99 \underl auf ihrem Weg zum Horizont.}%
