--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -61,8 +61,10 @@
 
 \whitecard{Böse}{Verlust von Zivilisten.}%
 \whitecard{Böse}{Lepra.}%
-\blackcard{1}{Böse}{Wofür ist Krieg gut?}%
+\whitecard{Böse}{Seppuku.}%
 
+\blackcard{1}{Böse}{Wofür ist Krieg gut?}%
 \blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
 \blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
+
 \blackcard{1}{Böse}{Weiße Menschen wie \underl.}%
