--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -25,6 +25,7 @@
 
 \whitecard{Drogen}{Kleber schnüffeln.}%
 \whitecard{Drogen}{Mal so richtig\newline high werden.}%
-\blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
+\whitecard{Drogen}{Ein Drogendeal.}%
 
+\blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
 \blackcard{2}{Drogen}{Als einen Acid-Trip hatte, wurde \underl zu \underl.}%
